# rabies-transmission-model

./: .gitignore  LICENSE  README.md  agents.py  app.py  model.py  parameter_tuning.py  params.py  pyproject.toml  utils.py
ml/: __init__.py  cli.py  data.py  optimizer.py  surrogate.py
pages/: 1_Policy_Optimizer.py
tests/: test_ml.py
