[project]
name = "rabies-transmission-model"
version = "0.2.0"
description = "Agent-based rabies transmission simulator with an ML-driven policy optimizer and Streamlit dashboard."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "Maanav Chittireddy" }]
dependencies = [
    "mesa>=3.2.0",
    "networkx>=3.3",
    "numpy>=2.0.0",
    "pandas>=2.2.0",
    "streamlit>=1.46.1",
    "plotly>=6.2.0",
    "matplotlib>=3.10.3",
    "kaleido>=1.0.0",
    "scikit-learn>=1.5.0",
    "joblib>=1.4.0",
]

[project.scripts]
rabies-optimize = "ml.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ml"]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]
